# performance_aware_programming

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
.woodpecker/: .all-checks-complete.yml  .build.yml  build.yaml
generator/: Cargo.toml
generator/src/: main.rs
haversine/: Cargo.toml
haversine-app/: Cargo.toml
haversine-app/src/: main.rs
haversine/src/: distance.rs  earth.rs  haversine.rs  lib.rs
json/: Cargo.toml
json/src/: example.json  json_object.rs
sim-wrapper/: Cargo.toml
sim-wrapper/src/: main.rs
sim_8086/: Cargo.toml
sim_8086/src/: arithmetic_expression.rs  arithmetic_instruction.rs  assembly.rs  boolean_instruction.rs  computer.rs  effective_address.rs  inc_instruction.rs  instruction.rs  jump_instruction.rs  lib.rs  logic_instruction.rs  move_instruction.rs  program.rs  register.rs  trivia_instruction.rs
sim_8086/tests/: test_computer.rs  test_program.rs
src/: assembly.rs  main.rs  register.rs
wrapper/: Cargo.toml
wrapper/src/: main.rs
