[package]
name = "performance_aware_programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = [ "derive" ] }
const_panic = "0.2.7"
nom = "7.1.3"

[profile.release]
lto = true
strip = true
panic = 'abort'
