[workspace]
members = [
    "sim_8086",
    "sim-wrapper",
    "generator",
    "haversine",
    "json",
    "haversine-app"
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.metadata.crane]
name = "performance_aware_programming"
version = "0.1.0"

[profile.release]
lto = true
strip = true
panic = "abort"
