[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap = { version = "4.3.1", features = [ "derive" ] }
rand = "0.8.5"
haversine = { path = "../haversine" }
serde_json = "1.0.96"
serde = "1.0.163"
byteorder = "1.4.3"
