[package]
name = "sim_8086"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
const_panic = "0.2.7"
nom = "7.1.3"

[dev-dependencies]
arbtest = "0.2.0"
